started doing navbar

--- a/index.html
+++ b/index.html
@@ -40,14 +40,48 @@
           <div class="inner cover">
             <h1 class="cover-heading"></h1>
             <p class="lead"><img src="images/AH_black.png" style="width:75%;height:75%"></img>	</p>
-            <p class="lead">
-            	<hr>
-              <a href="#" style="text-decoration: none;" >Home </a>
-              <a href="#" style="text-decoration: none;" >Team </a>
-              <a href="#" style="text-decoration: none;" >Project </a>
-              <a href="#" style="text-decoration: none;" >Model</a>
-              <hr>
-            </p>
+            			<!-- Start of menu -->
+<div id="centeredmenu">
+   <ul>
+      <li><a href="#">Tab one</a>
+         <ul>
+            <li><a href="#">Link one</a></li>
+            <li><a href="#">Link two</a></li>
+            <li><a href="#">Link three</a></li>
+            <li><a href="#">Link four</a></li>
+            <li><a href="#">Link five</a></li>
+         </ul>
+      </li>
+      <li><a href="#" >Tab two</a>
+         <ul>
+            <li><a href="#">Link one</a></li>
+            <li><a href="#">Link two</a></li>
+            <li><a href="#">Link three</a></li>
+            <li><a href="#">Link four</a></li>
+            <li><a href="#">Link five is a long link that wraps</a></li>
+         </ul>
+      </li>
+      <li><a href="#">Long tab three</a>
+         <ul>
+            <li><a href="#">Link one</a></li>
+            <li><a href="#">Link two</a></li>
+            <li><a href="#">Link three</a></li>
+            <li><a href="#">Link four</a></li>
+            <li><a href="#">Link five</a></li>
+         </ul>
+      </li>
+      <li><a href="#">Tab four</a>
+         <ul class="last">
+            <li><a href="#">Link one</a></li>
+            <li><a href="#">Link two</a></li>
+            <li><a href="#">Link three</a></li>
+            <li><a href="#">Link four</a></li>
+            <li><a href="#">Link five</a></li>
+         </ul>
+      </li>
+   </ul>
+</div>
+			<!-- End of menu  -->
           </div>
 
           <div class="mastfoot">
