--- a/index.html
+++ b/index.html
@@ -48,40 +48,35 @@
 
           <div id="centeredmenu">
              <ul>
-                <li><a href="#">Tab one</a>
-                   <ul>
+                <li><a href="#">Home</a>
+                   <!--<ul>
                       <li><a href="#">Link one</a></li>
                       <li><a href="#">Link two</a></li>
                       <li><a href="#">Link three</a></li>
                       <li><a href="#">Link four</a></li>
                       <li><a href="#">Link five</a></li>
+                   </ul>-->
+                </li>
+                <li><a href="#" >Project</a>
+                   <ul>
+                      <li><a href="#">Abstract</a></li>
+                      <li><a href="#">Implementation</a></li>
+                      <li><a href="#">Results</a></li>
                    </ul>
                 </li>
-                <li><a href="#" >Tab two</a>
-                   <ul>
-                      <li><a href="#">Link one</a></li>
-                      <li><a href="#">Link two</a></li>
-                      <li><a href="#">Link three</a></li>
-                      <li><a href="#">Link four</a></li>
-                      <li><a href="#">Link five is a long link that wraps</a></li>
-                   </ul>
-                </li>
-                <li><a href="#">Long tab three</a>
-                   <ul>
+                <li><a href="#">Team</a>
+                   <!--<ul>
                       <li><a href="#">Link one</a></li>
                       <li><a href="#">Link two</a></li>
                       <li><a href="#">Link three</a></li>
                       <li><a href="#">Link four</a></li>
                       <li><a href="#">Link five</a></li>
-                   </ul>
+                   </ul>-->
                 </li>
-                <li><a href="#">Tab four</a>
+                <li><a href="#">Modeling</a>
                    <ul class="last">
-                      <li><a href="#">Link one</a></li>
-                      <li><a href="#">Link two</a></li>
-                      <li><a href="#">Link three</a></li>
-                      <li><a href="#">Link four</a></li>
-                      <li><a href="#">Link five</a></li>
+                      <li><a href="#">Model</a></li>
+                      <li><a href="#">Predictions</a></li>
                    </ul>
                 </li>
              </ul>
