added some text

--- a/index.html
+++ b/index.html
@@ -81,8 +81,22 @@
                 </li>
              </ul>
           </div>
-          <div class="cover-container">
+          
+          <div class="inner-container">
 
+		  <p>
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lobortis molestie tempus. Nunc scelerisque erat quis nulla finibus gravida. Quisque vehicula interdum est non ultrices. Ut tellus erat, faucibus mattis massa at, malesuada condimentum est. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam in lorem placerat, tempus dolor quis, interdum nisl. Nunc imperdiet pulvinar nisl, vitae placerat nunc luctus sed. Duis interdum gravida pretium.<br><br>
+
+Nam euismod quam a justo ultricies blandit. Nulla vehicula laoreet lorem, id laoreet urna accumsan eu. In a laoreet eros. Nunc malesuada quam eget mauris congue egestas. Fusce ut sollicitudin velit. Nulla suscipit dignissim enim eget feugiat. Cras id semper libero. Cras ultricies odio non eros bibendum, vulputate imperdiet orci volutpat. Duis pretium massa at congue lacinia. Fusce volutpat lorem nec elementum mollis. Nulla facilisi. Nulla ultrices magna eget enim vulputate dignissim.<br><br>
+
+Duis congue, neque eu finibus condimentum, ligula nisi malesuada dui, et interdum ex mauris ut risus. In id tortor sit amet elit sollicitudin sodales. Praesent maximus quam diam, sed pretium diam vulputate eget. Fusce dui justo, vestibulum vel libero vestibulum, sollicitudin tincidunt leo. Suspendisse ligula massa, egestas eu varius id, viverra sed arcu. Integer tempus suscipit velit, id porta nunc dictum in. Ut facilisis eleifend est. Vivamus venenatis egestas sollicitudin. Sed pretium, velit eget blandit vestibulum, ex lorem gravida libero, id efficitur lorem urna id purus. Morbi quis tempor orci. Nulla facilisi. Curabitur eleifend augue eu felis vestibulum eleifend. Donec suscipit tempus ultrices. Aenean et sollicitudin tortor. Ut condimentum tellus at ultricies maximus. Curabitur libero felis, posuere in dapibus dignissim, tincidunt vitae diam.<br><br>
+
+Nam nec dolor in nibh sollicitudin ornare. Sed sit amet venenatis diam. Aenean consequat mauris non tellus convallis, at feugiat erat viverra. Maecenas diam felis, commodo ac arcu at, venenatis volutpat mi. Mauris facilisis lacus id viverra mattis. Praesent erat augue, consectetur at feugiat at, vulputate at mauris. Praesent tempor est ut suscipit consectetur. Donec vitae condimentum ipsum. Nam interdum lacus a consequat euismod. Mauris venenatis nibh mi, nec pellentesque mi bibendum eu. Vivamus eleifend sagittis nibh eu varius. Praesent tincidunt aliquam libero. Vestibulum egestas non felis eget accumsan. Sed at egestas justo. Nulla dignissim et elit at suscipit. Nam id felis sit amet quam vulputate volutpat quis sit amet dui.<br><br>
+
+Donec eget odio ut tellus fringilla scelerisque mollis sit amet mi. Vivamus pellentesque fermentum leo, ut egestas mauris tristique id. Vivamus cursus sem varius dapibus bibendum. Duis egestas sit amet tortor eu vestibulum. Etiam nulla tortor, consequat elementum nunc molestie, ullamcorper scelerisque arcu. Donec et ex et libero iaculis elementum. Aenean orci lorem, congue ac tellus ut, convallis egestas diam. Praesent elit tortor, facilisis id efficitur id, efficitur eget diam. Maecenas interdum mattis pulvinar. Nam scelerisque mauris orci, aliquam vehicula orci hendrerit quis. Praesent volutpat ex augue, et ultrices libero lobortis quis. </p>
+		  </div>
+		  <div class="cover-container">
           <div class="mastfoot">
             <div class="inner">
               <p><a href="https://twitter.com/aaltohelsinki">@AaltoHelsinki</a></p>
