Fixed bottom centralization

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Nam nec dolor in nibh sollicitudin ornare. Sed sit amet venenatis diam. Aenean c
 
 Donec eget odio ut tellus fringilla scelerisque mollis sit amet mi. Vivamus pellentesque fermentum leo, ut egestas mauris tristique id. Vivamus cursus sem varius dapibus bibendum. Duis egestas sit amet tortor eu vestibulum. Etiam nulla tortor, consequat elementum nunc molestie, ullamcorper scelerisque arcu. Donec et ex et libero iaculis elementum. Aenean orci lorem, congue ac tellus ut, convallis egestas diam. Praesent elit tortor, facilisis id efficitur id, efficitur eget diam. Maecenas interdum mattis pulvinar. Nam scelerisque mauris orci, aliquam vehicula orci hendrerit quis. Praesent volutpat ex augue, et ultrices libero lobortis quis. </p>
 		  </div>
-		  <div class="cover-container">
+		  <div class="cover2-container">
           <div class="mastfoot">
             <div class="inner">
               <p><a href="https://twitter.com/aaltohelsinki">@AaltoHelsinki</a></p>
